# tig

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  TO_IMPROVE.md
docs/: personal_notes.md
main/: CMakeLists.txt  main.c
src/: '  CMakeLists.txt  \  blob.c  blob.h  cacheTree.h  cli.c  cli.h  fs.c  fs.h  index.c  index.h  init.c  init.h  logger.c  logger.h  object.c  object.h  tree.c  tree.h  utils.c
src/utils/: utils.c  utils.h
test/: CMakeLists.txt  cli_test.c  init_test.c  object_test.c
